# DrugData

./: .gitignore  Cargo.toml  Dockerfile  fly.toml  init.sql  readme.md  start.sh
entity/: Cargo.toml
entity/src/: Applications.rs  Product.rs  User.rs  UserToken.rs  accounting_entry.rs  lib.rs  schedule.rs  session.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20220618_162459_create_product_table.rs  m20220619_174222_create_session_table.rs  m20220619_230031_create_schedule_table.rs  m20220619_234623_create_accounting_table.rs
src/: constants.rs  init.rs  main.rs
src/controllers/: auth_controller.rs  drug_controller.rs  mod.rs  schedule_controller.rs  user_controller.rs
src/middleware/: auth.rs
src/models/: auth.rs  response.rs
src/utils/: mod.rs  token_utils.rs
