[workspace]
members = [".", "entity"]

[package]
name = "DrugData"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
tempfile = "3.3.0"
reqwest = { version = "0.11"}
anyhow = "1.0"
tokio = { version = "1.19.2", features = ["full"] }
zip = "0.6.2"
actix-web = "4"
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.21"
env_logger = "0.9.0"

[dependencies.sea-orm]
version = "^0"
features = [ "sqlx-sqlite", "runtime-actix-native-tls", "macros" ]