[workspace]
members = [".", "entity", "migration"]

[package]
name = "drug_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
tempfile = "3.3.0"
reqwest = { version = "0.11"}
anyhow = "1.0"
tokio = { version = "1.19.2", features = ["full"] }
zip = "0.6.2"
actix-web = "4"
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.21"
futures-util = "0.3.21"
env_logger = "0.9.0"
log = "0.4.17"
actix-identity = "0.4.0"
lazy_static = "1.4"
time = "0.3.9"
jsonwebtoken = "8.1.1"
chrono = "0.4.19"
actix-service = "2.0.2"
cron = "0.11.0"

[dependencies.sea-orm]
version = "^0"
features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]