[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "^0" }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.19"
rust-argon2 = "1.0"
rand = "0.8.5"
jsonwebtoken = "8.1.1"
cron = "0.11.0"