[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
zip = "0.6.2"
futures = "0.3.21"
env_logger = "0.9.0"
log = "0.4.17"
tempfile = "3.3.0"
reqwest = { version = "0.11"}
anyhow = "1.0"
actix-web = "4"
tokio = { version = "1.19.2", features = ["full"] }
[dependencies.sea-orm-migration]
version = "^0.8.0"
